Fix button spacing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,6 +4,9 @@
 
 
 /* universal */
+#link_id {
+  color: white;
+}
 
 .media {
   padding-left: 5%;
